# diamond_vision_api

./: .flake8  .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: workflow.yml
docs/: README.ru.md
instance/: database.sqlite
src/: .env.example  main.py
src/api/: __init__.py
src/api/routers/: complaints.py
src/core/: __init__.py  config.py  database.py  dependencies.py  exception_handler.py  exceptions.py  external_api.py
src/migrations/: env.py
src/migrations/versions/: 166289400abc_init.py
src/models/: enums.py  models.py  schemas.py
src/repositories/: __init__.py  complaint_repository.py
src/services/: __init__.py  complaint_service.py
src/tests/: conftest.py  test_external_apis.py  test_repository.py  test_schemas.py  test_service.py
